03-security-and-policies/02-homework/homework/vagrant/create-policy-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-producer-form-consumer
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      role: producer
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: consumer
    ports:
    - protocol: TCP
      port: 5000
