03-security-and-policies/02-homework/homework/vagrant/create-policy-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-consumer-from-client
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      role: consumer
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: client
    ports:
    - protocol: TCP
      port: 5000
